y.output
Terminale, die in Grammatik unbenutzt sind

   IF
   ELSE
   WHILE
   VAR


Grammatik

    0 $accept: lines $end

    1 lines: lines line
    2      | line

    3 line: expr '\n'
    4     | ID '\n'

    5 expr: expr '+' expr
    6     | expr '-' expr
    7     | expr '*' expr
    8     | expr '/' expr
    9     | '(' expr ')'
   10     | NUM
   11     | '-' expr


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
'\n' (10) 3 4
'(' (40) 9
')' (41) 9
'*' (42) 7
'+' (43) 5
'-' (45) 6 11
'/' (47) 8
error (256)
NUM (258) 10
IF (259)
ELSE (260)
WHILE (261)
ID (262) 4
VAR (263)
UMINUS (264)


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (17)
    auf der linken Seite: 0
lines (18)
    auf der linken Seite: 1 2, auf der rechten Seite: 0 1
line (19)
    auf der linken Seite: 3 4, auf der rechten Seite: 1 2
expr (20)
    auf der linken Seite: 5 6 7 8 9 10 11, auf der rechten Seite: 3
    5 6 7 8 9 11


Zustand 0

    0 $accept: . lines $end

    NUM  schiebe und gehe zu Zustand 1 über
    ID   schiebe und gehe zu Zustand 2 über
    '-'  schiebe und gehe zu Zustand 3 über
    '('  schiebe und gehe zu Zustand 4 über

    lines  gehe zu Zustand 5 über
    line   gehe zu Zustand 6 über
    expr   gehe zu Zustand 7 über


Zustand 1

   10 expr: NUM .

    $default  reduziere mit Regel 10 (expr)


Zustand 2

    4 line: ID . '\n'

    '\n'  schiebe und gehe zu Zustand 8 über


Zustand 3

   11 expr: '-' . expr

    NUM  schiebe und gehe zu Zustand 1 über
    '-'  schiebe und gehe zu Zustand 3 über
    '('  schiebe und gehe zu Zustand 4 über

    expr  gehe zu Zustand 9 über


Zustand 4

    9 expr: '(' . expr ')'

    NUM  schiebe und gehe zu Zustand 1 über
    '-'  schiebe und gehe zu Zustand 3 über
    '('  schiebe und gehe zu Zustand 4 über

    expr  gehe zu Zustand 10 über


Zustand 5

    0 $accept: lines . $end
    1 lines: lines . line

    $end  schiebe und gehe zu Zustand 11 über
    NUM   schiebe und gehe zu Zustand 1 über
    ID    schiebe und gehe zu Zustand 2 über
    '-'   schiebe und gehe zu Zustand 3 über
    '('   schiebe und gehe zu Zustand 4 über

    line  gehe zu Zustand 12 über
    expr  gehe zu Zustand 7 über


Zustand 6

    2 lines: line .

    $default  reduziere mit Regel 2 (lines)


Zustand 7

    3 line: expr . '\n'
    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr

    '-'   schiebe und gehe zu Zustand 13 über
    '+'   schiebe und gehe zu Zustand 14 über
    '*'   schiebe und gehe zu Zustand 15 über
    '/'   schiebe und gehe zu Zustand 16 über
    '\n'  schiebe und gehe zu Zustand 17 über


Zustand 8

    4 line: ID '\n' .

    $default  reduziere mit Regel 4 (line)


Zustand 9

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
   11     | '-' expr .

    $default  reduziere mit Regel 11 (expr)


Zustand 10

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
    9     | '(' expr . ')'

    '-'  schiebe und gehe zu Zustand 13 über
    '+'  schiebe und gehe zu Zustand 14 über
    '*'  schiebe und gehe zu Zustand 15 über
    '/'  schiebe und gehe zu Zustand 16 über
    ')'  schiebe und gehe zu Zustand 18 über


Zustand 11

    0 $accept: lines $end .

    $default  annehmen


Zustand 12

    1 lines: lines line .

    $default  reduziere mit Regel 1 (lines)


Zustand 13

    6 expr: expr '-' . expr

    NUM  schiebe und gehe zu Zustand 1 über
    '-'  schiebe und gehe zu Zustand 3 über
    '('  schiebe und gehe zu Zustand 4 über

    expr  gehe zu Zustand 19 über


Zustand 14

    5 expr: expr '+' . expr

    NUM  schiebe und gehe zu Zustand 1 über
    '-'  schiebe und gehe zu Zustand 3 über
    '('  schiebe und gehe zu Zustand 4 über

    expr  gehe zu Zustand 20 über


Zustand 15

    7 expr: expr '*' . expr

    NUM  schiebe und gehe zu Zustand 1 über
    '-'  schiebe und gehe zu Zustand 3 über
    '('  schiebe und gehe zu Zustand 4 über

    expr  gehe zu Zustand 21 über


Zustand 16

    8 expr: expr '/' . expr

    NUM  schiebe und gehe zu Zustand 1 über
    '-'  schiebe und gehe zu Zustand 3 über
    '('  schiebe und gehe zu Zustand 4 über

    expr  gehe zu Zustand 22 über


Zustand 17

    3 line: expr '\n' .

    $default  reduziere mit Regel 3 (line)


Zustand 18

    9 expr: '(' expr ')' .

    $default  reduziere mit Regel 9 (expr)


Zustand 19

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    6     | expr '-' expr .
    7     | expr . '*' expr
    8     | expr . '/' expr

    '*'  schiebe und gehe zu Zustand 15 über
    '/'  schiebe und gehe zu Zustand 16 über

    $default  reduziere mit Regel 6 (expr)


Zustand 20

    5 expr: expr . '+' expr
    5     | expr '+' expr .
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr

    '*'  schiebe und gehe zu Zustand 15 über
    '/'  schiebe und gehe zu Zustand 16 über

    $default  reduziere mit Regel 5 (expr)


Zustand 21

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    7     | expr '*' expr .
    8     | expr . '/' expr

    $default  reduziere mit Regel 7 (expr)


Zustand 22

    5 expr: expr . '+' expr
    6     | expr . '-' expr
    7     | expr . '*' expr
    8     | expr . '/' expr
    8     | expr '/' expr .

    $default  reduziere mit Regel 8 (expr)
